# atol-reference-data-lookups

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
deprecated/: arg_parser.py  map_metadata.py  organism_mapper.py  resolve_organism.py
deprecated/workflow/rules/: datamapper.smk  pull_ncbi_taxonomy.smk
extras/: Makefile  test_code.py
src/assembly_data_downloader/: assembly_data_downloader.py
src/atol_reference_data_lookups/: __init__.py  atol_reference_data_lookups.py  cache.py  io.py  taxdump_tree.py  tree.py
src/atol_reference_data_lookups/config/: taxid_to_augustus_dataset.tsv
src/get_remote_files/: get_remote_files.py
src/get_remote_files/workflow/: Snakefile
src/get_remote_files/workflow/rules/: pull_busco_mapping.smk
test-data/: taxid_list.txt
