[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "atol-reference-data-lookups"
dynamic = ["version"]
description = "Look up reference datasets by NCBI TaxId"
readme = "README.md"
authors = [
    { name = "Tom Harrop", email = "tharrop@unimelb.edu.au" },
    { name = "Jane Tung", email = "jane.tung@uq.edu.au" },
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.14,<3.15"
dependencies = ["snakemake>=9.16.3,<10", "scikit-bio>=0.6.3"]

[project.urls]
"Homepage" = "https://github.com/TomHarrop/atol-reference-data-lookups"

[project.scripts]
atol-reference-data-lookups = "atol_reference_data_lookups.atol_reference_data_lookups:main"
get-remote-files = "get_remote_files.get_remote_files:main"

[tool.setuptools.package-data]
"atol_reference_data_lookups" = ["config/taxid_to_augustus_dataset.tsv"]
"get_remote_files" = ["workflow/Snakefile", "workflow/rules/*.smk"]

[tool.setuptools_scm]
